--- a/InjectableServices/InjectableServices.csproj
+++ b/InjectableServices/InjectableServices.csproj
@@ -13,6 +13,9 @@
     <Copyright>Alejo Millo 2024</Copyright>
     <AssemblyName>$(MSBuildProjectName)</AssemblyName>
     <Product>AMillo.$(AssemblyName)</Product>
+    <RepositoryUrl>https://github.com/AlejoMillo00/AMillo.InjectableServices</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
